--- a/public/index.html
+++ b/public/index.html
@@ -20,16 +20,7 @@
 <meta name="twitter:description" content="Bloco TnV">
 <meta name="twitter:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
 <meta id="theme-color" name="theme-color" content="#eeeeee"/>
-<script>
-	(function(d) {
-		var config = {
-					kitId: 'jhl4ayv',
-					scriptTimeout: 3000,
-					async: true
-				},
-				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-	})(document);
-</script>
+<script src="https://use.typekit.net/jhl4ayv.js"></script>
 <!--<script>try{Typekit.load({ async: true });}catch(e){}</script>-->
 <script>
 
