Update Links: a-side, footer Insert Theme on :ine-up Date ***Insert "flex-direction: column" on tonovaso.css (class lineupArtistResume-date, lines 1185/1309)***

--- a/public/contato.html
+++ b/public/contato.html
@@ -97,7 +97,7 @@
 
 			<div class="AsideButton AsideButton--facebook">
 
-				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.facebook.com/events/150763765394621/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -111,7 +111,7 @@
 
 			<div class="AsideButton AsideButton--instagram">
 
-				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.instagram.com/blocotnv/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -140,11 +140,11 @@
 
 				<h2 class="font-amber-a700">Entre em contato!</h2>
 
-				<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a> <br/>
-				Braz <a href="tel:+5518991076902">18 9 9107 6902</a></p>
+				<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green">18 9 9615 5409</a><br/>
+				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green">18 9 9107 6902</a></p>
 
 				<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a> <br/>
-					<span class="Contact-complementary">Palmital - São Paulo</span></p>
+					<span class="Contact-complementary">Rua XV de Novembro, 29 - Palmital - São Paulo</span></p>
 
 			</div>
 
