--- a/public/index.html
+++ b/public/index.html
@@ -231,6 +231,7 @@
 				<div class="LineupArtistResume-date">
 
 					<span>24/02</span>
+					<span style="font-size: .875em;">White Party</span>
 
 				</div>
 
@@ -298,6 +299,7 @@
 				<div class="LineupArtistResume-date">
 
 					<span>25/02</span>
+					<span style="font-size: .875em;">Abadá</span>
 
 				</div>
 
@@ -365,6 +367,7 @@
 				<div class="LineupArtistResume-date">
 
 					<span>26/02</span>
+					<span style="font-size: .875em;">Neon</span>
 
 				</div>
 
@@ -434,6 +437,7 @@
 				<div class="LineupArtistResume-date">
 
 					<span>27/02</span>
+					<span style="font-size: .875em;">Fantasy</span>
 
 				</div>
 
@@ -501,6 +505,7 @@
 				<div class="LineupArtistResume-date">
 
 					<span>28/02</span>
+					<span style="font-size: .875em;">Hawaii</span>
 
 				</div>
 
