--- a/public/20-anos.html
+++ b/public/20-anos.html
@@ -118,7 +118,7 @@
 
 			<div class="AsideButton AsideButton--facebook">
 
-				<a href="https://www.facebook.com/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.facebook.com/events/150763765394621/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -132,7 +132,7 @@
 
 			<div class="AsideButton AsideButton--instagram">
 
-				<a href="https://www.instagram.com/braztnv" class="AsideButton-selectArea" draggable="false">
+				<a href="https://www.instagram.com/blocotnv/" class="AsideButton-selectArea" draggable="false">
 
 					<div class="AsideButton-icon">
 
@@ -769,9 +769,9 @@
 
 		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
 
-		<p>Pátio da FEPASA, Av. Reginalda Leão, S/N - Palmital, SP</p>
-		<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a></p>
-		<p>Braz <a href="tel:+5518991076902">18 9 9107 6902</a></p>
+		<p>Rua XV de Novembro, 29 - Palmital, SP</p>
+		<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a></p>
+		<p>Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a></p>
 		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
 		<div class="Footer-social">
@@ -782,13 +782,13 @@
 
 			</a>
 
-			<a href="https://www.facebook.com/tonovaso.palmital/" class="Footer-socialIcon">
+			<a href="https://www.facebook.com/events/150763765394621/" class="Footer-socialIcon">
 
 				<span class="icon-facebook"></span>
 
 			</a>
 
-			<a href="https://www.instagram.com/braztnv" class="Footer-socialIcon">
+			<a href="https://www.instagram.com/blocotnv/" class="Footer-socialIcon">
 
 				<span class="icon-instagram"></span>
 
