--- a/public/proto-02.html
+++ b/public/proto-02.html
@@ -20,16 +20,7 @@
 <meta name="twitter:description" content="Bloco TnV">
 <meta name="twitter:image" content="https://tonovaso.com.br/dist/img/meta-image.jpg">
 <meta id="theme-color" name="theme-color" content="#eeeeee"/>
-<script>
-	(function(d) {
-		var config = {
-					kitId: 'jhl4ayv',
-					scriptTimeout: 3000,
-					async: false
-				},
-				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-	})(document);
-</script>
+<script src="https://use.typekit.net/jhl4ayv.js"></script>
 <!--<script>try{Typekit.load({ async: true });}catch(e){}</script>-->
 <script>
 
@@ -67,17 +58,6 @@
 <![endif]-->
 
 <body class="tk-proxima-nova">
-
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-87600862-1', 'auto');
-	ga('send', 'pageview');
-
-</script>
 
 <aside class="Aside font-grey-700">
 
@@ -160,7 +140,15 @@
 		<div class="Hero-background"></div>
 		<div class="Hero-inner">
 
-			<img src="dist/img/logo/TNVLogoTyped.png" alt="Logo TNV"/>
+			<div class="TitleLight">
+				<p class="TitleLight-gradient text-date">24 a 28 de fevereiro</p>
+			</div>
+
+			<img src="dist/img/logo/TNVLogo.png" alt="Logo TNV"/>
+
+			<div class="TitleLight">
+				<p class="TitleLight-gradient text-local">Carnaval 2017, Palmital - SP</p>
+			</div>
 
 		</div>
 
@@ -208,17 +196,18 @@
 
 	<div class="Header-action">
 
-		<a href="tickets" class="Button Button--primary" style="margin-bottom: 0;">
+		<a href="tickets" class="Button Button--primary" style="margin-bottom: .5em;">
 
 			<span>Ingressos</span>
 
 		</a>
 
-		<p>24 a 28 de fevereiro de 2017</p>
-
 		<div class="custom-icon-mouse">
+
 			<div class="arrow"></div>
+
 			<span class="tooltip">Explore a página</span>
+
 		</div>
 
 	</div>
