--- a/public/steps.html
+++ b/public/steps.html
@@ -59,16 +59,15 @@
 
 <body class="tk-proxima-nova">
 
-<script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-	ga('create', 'UA-87600862-1', 'auto');
-	ga('send', 'pageview');
-
-</script>
+<!--<script>-->
+	<!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
+				<!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
+			<!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
+	<!--})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
+<!---->
+	<!--ga('create', 'UA-87600862-1', 'auto');-->
+	<!--ga('send', 'pageview');-->
+<!--</script>-->
 
 <div id="tickets-dialog" class="Dialog">
 
@@ -214,6 +213,103 @@
 	</div>
 
 </header>
+
+<section class="Guide">
+
+	<div class="Guide-background"></div>
+	<div class="Guide-inner container">
+
+		<div class="Guide-list">
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-header">
+
+					<div class="GuideStep-icon">
+
+						<span class="icon-add_shopping_cart"></span>
+
+					</div>
+
+					<h1 class="GuideStep-number">1</h1>
+
+					<h2 class="GuideStep-title">Escolha</h2>
+
+				</div>
+
+				<p class="GuideStep-description">Selecione os Pacotes ou Diárias desejadas e clique em "Finalizar pedido"</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-arrow_forward"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number">2</h1>
+
+				<h2 class="GuideStep-title">Ambiente seguro</h2>
+
+				<p class="GuideStep-description">Você será redirecionado ao PagSeguro</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<i class="icon-person"></i>
+
+				</div>
+
+				<h1 class="GuideStep-number">3</h1>
+
+				<h2 class="GuideStep-title">Identifique-se</h2>
+
+				<p class="GuideStep-description">Insira seu login e senha ou cadastre-se no PagSeguro</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-ticket"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number">4</h1>
+
+				<h2 class="GuideStep-title">Pague em até 18x</h2>
+
+				<p class="GuideStep-description">Escolha a forma de pagamento desejada e aguarde a confirmação de pagamento</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-event"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number">5</h1>
+
+				<h2 class="GuideStep-title">Pronto!</h2>
+
+				<p class="GuideStep-description">Agora é só imprimir o comprovante e trocar ele pela sua pulseira na data indicada nos locais que você encontra aqui</p>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
 
 <div id="tickets" class="Tickets">
 
@@ -669,7 +765,7 @@
 
 				<div class="TicketsCheckout-start">
 
-					<span>Comprar</span>
+					<span>Finalizar pedido</span>
 
 				</div>
 
