--- a/public/steps.html
+++ b/public/steps.html
@@ -237,7 +237,7 @@
 
 				</div>
 
-				<p class="GuideStep-description">Selecione os Pacotes ou Diárias desejadas e clique em "Finalizar pedido"</p>
+				<p class="GuideStep-description">Selecione a quantidade de Pacotes ou Diárias desejadas e clique em "Finalizar pedido"</p>
 
 			</div>
 
