Updated fontello icon pack with steps icons

--- a/public/steps.html
+++ b/public/steps.html
@@ -214,7 +214,7 @@
 
 </header>
 
-<section class="Guide">
+<section class="Guide grey-50 font-brown-900">
 
 	<div class="Guide-background"></div>
 	<div class="Guide-inner container">
@@ -223,19 +223,15 @@
 
 			<div class="GuideStep">
 
-				<div class="GuideStep-header">
+				<div class="GuideStep-icon">
 
-					<div class="GuideStep-icon">
-
-						<span class="icon-add_shopping_cart"></span>
-
-					</div>
-
-					<h1 class="GuideStep-number">1</h1>
-
-					<h2 class="GuideStep-title">Escolha</h2>
+					<span class="icon-add_shopping_cart"></span>
 
 				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">1</h1>
+
+				<h2 class="GuideStep-title font-amber-a700"><span class="mobile-only">1 - </span>Escolha</h2>
 
 				<p class="GuideStep-description">Selecione a quantidade de Pacotes ou Diárias desejadas e clique em "Finalizar pedido"</p>
 
@@ -245,13 +241,13 @@
 
 				<div class="GuideStep-icon">
 
-					<span class="icon-arrow_forward"></span>
+					<span class="icon-edit"></span>
 
 				</div>
 
-				<h1 class="GuideStep-number">2</h1>
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">2</h1>
 
-				<h2 class="GuideStep-title">Ambiente seguro</h2>
+				<h2 class="GuideStep-title font-amber-a700"><span class="mobile-only">2 - </span>Ambiente seguro</h2>
 
 				<p class="GuideStep-description">Você será redirecionado ao PagSeguro</p>
 
@@ -261,13 +257,13 @@
 
 				<div class="GuideStep-icon">
 
-					<i class="icon-person"></i>
+					<span class="icon-pagseguro"></span>
 
 				</div>
 
-				<h1 class="GuideStep-number">3</h1>
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">3</h1>
 
-				<h2 class="GuideStep-title">Identifique-se</h2>
+				<h2 class="GuideStep-title font-amber-a700"><span class="mobile-only">3 - </span>Identifique-se</h2>
 
 				<p class="GuideStep-description">Insira seu login e senha ou cadastre-se no PagSeguro</p>
 
@@ -277,13 +273,13 @@
 
 				<div class="GuideStep-icon">
 
-					<span class="icon-ticket"></span>
+					<span class="icon-credit-card"></span>
 
 				</div>
 
-				<h1 class="GuideStep-number">4</h1>
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">4</h1>
 
-				<h2 class="GuideStep-title">Pague em até 18x</h2>
+				<h2 class="GuideStep-title font-amber-a700"><span class="mobile-only">4 - </span>Pague em até 18x</h2>
 
 				<p class="GuideStep-description">Escolha a forma de pagamento desejada e aguarde a confirmação de pagamento</p>
 
@@ -293,13 +289,13 @@
 
 				<div class="GuideStep-icon">
 
-					<span class="icon-event"></span>
+					<span class="icon-print"></span>
 
 				</div>
 
-				<h1 class="GuideStep-number">5</h1>
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">5</h1>
 
-				<h2 class="GuideStep-title">Pronto!</h2>
+				<h2 class="GuideStep-title font-amber-a700"><span class="mobile-only">5 - </span>Pronto!</h2>
 
 				<p class="GuideStep-description">Agora é só imprimir o comprovante e trocar ele pela sua pulseira na data indicada nos locais que você encontra aqui</p>
 
