Tickets page finished (steps and points added and styled). Renamed old ticket page (current => old => legacy). Added favicon without full support, only favicon.ico on root.

--- a/public/tickets.html
+++ b/public/tickets.html
@@ -215,6 +215,99 @@
 
 </header>
 
+<section class="Guide grey-50 font-brown-900">
+
+	<div class="Guide-background"></div>
+	<div class="Guide-inner container">
+
+		<div class="Guide-list">
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-add_shopping_cart"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">1</h1>
+
+				<h2 class="GuideStep-title font-amber-a700">1 - Escolha</h2>
+
+				<p class="GuideStep-description">Selecione abaixo os Pacotes e/ou Diárias desejadas e clique em "Finalizar pedido"</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-pagseguro"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">2</h1>
+
+				<h2 class="GuideStep-title font-amber-a700">2 - Ambiente seguro</h2>
+
+				<p class="GuideStep-description">Você será redirecionado ao PagSeguro</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-edit"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">3</h1>
+
+				<h2 class="GuideStep-title font-amber-a700">3 - Identifique-se</h2>
+
+				<p class="GuideStep-description">Insira seu login e senha ou cadastre-se no PagSeguro</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-credit-card"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">4</h1>
+
+				<h2 class="GuideStep-title font-amber-a700">4 - Pague em até 18x</h2>
+
+				<p class="GuideStep-description">Escolha a forma de pagamento desejada e aguarde a confirmação de pagamento</p>
+
+			</div>
+
+			<div class="GuideStep">
+
+				<div class="GuideStep-icon">
+
+					<span class="icon-print"></span>
+
+				</div>
+
+				<h1 class="GuideStep-number font-amber-a700 mobile-hidden">5</h1>
+
+				<h2 class="GuideStep-title font-amber-a700">5 - Pronto!</h2>
+
+				<p class="GuideStep-description">Com comprovante impresso, retire sua pulseira na portaria e <a class="trigger-abadas" href="#abadas">confira os locais de retirada dos abadás</a>.</p>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
 <div id="tickets" class="Tickets">
 
 	<div class="Tickets-inner container">
@@ -289,7 +382,7 @@
 							<p>
 								O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								A pulseira poderá ser retirada na portaria do bloco à partir do dia 23/02/2017 e os abadás já podem ser retirados nos locais que você <a class="trigger-abadas" href="#abadas">confere aqui.</a>
 							</p>
 
 						</div>
@@ -373,7 +466,7 @@
 							<p>
 								O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								A pulseira poderá ser retirada na portaria do bloco à partir do dia 23/02/2017 e o abadá já pode ser retirado nos locais que você <a class="trigger-abadas" href="#abadas">confere aqui.</a>
 							</p>
 
 						</div>
@@ -456,7 +549,7 @@
 
 							<p>
 								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								As pulseiras poderão ser retiradas na portaria do bloco à partir do dia 23/02/2017.
 							</p>
 
 						</div>
@@ -539,7 +632,7 @@
 
 							<p>
 								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								As pulseiras poderão ser retiradas na portaria do bloco à partir do dia 23/02/2017.
 							</p>
 
 						</div>
@@ -621,8 +714,8 @@
 						<div class="TicketsOption-description">
 
 							<p>
-								Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								Adquira um abadá pelo site e compareça a um dos diversos pontos de retirada com seu comprovante para efetuar sua retirada.
+								Os locais para retirada você <a class="trigger-abadas" href="#abadas">encontra aqui.</a>
 							</p>
 
 						</div>
@@ -641,14 +734,6 @@
 			</div>
 
 		</div>
-
-		<footer class="Tickets-footer">
-
-			<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a> <br/>
-				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a> <br/>
-				<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
-
-		</footer>
 
 		<div class="TicketsCheckout Tickets-checkout">
 
@@ -681,6 +766,152 @@
 
 </div>
 
+<section class="Points font-brown-900">
+
+	<div class="Points-background"></div>
+	<div class="Points-inner">
+
+		<div id="abadas" class="Points-title grey-50 font-amber-a700">
+			Pontos de retirada dos abadás
+		</div>
+
+		<div class="Points-list container">
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">ASSIS</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Gonçalves Dias, 50</p>
+				<p class="PointTag-phone">18 3325 1399</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PALMITAL</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Praça da Matriz, 55</p>
+				<p class="PointTag-phone">18 3351 4515</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PORTARIA</h1>
+				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
+				<p class="PointTag-address">Rua XV de Novembro, 29</p>
+				<p class="PointTag-phone">(À partir de 23/02)</p>
+
+			</div>
+
+		</div>
+
+		<div class="Points-title grey-50 font-amber-a700">
+			Pontos de Venda
+		</div>
+
+		<div class="Points-list container">
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Assis</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Gonçalves Dias, 50</p>
+				<p class="PointTag-phone">18 3325 1399</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Assis</h1>
+				<h2 class="PointTag-local font-amber-a700">Padaria do Alex</h2>
+				<p class="PointTag-address">Av. Armando Salles de Oliveira, 59</p>
+				<p class="PointTag-phone">18 3022-2166</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Cândido Mota</h1>
+				<h2 class="PointTag-local font-amber-a700">Wilson Discos</h2>
+				<p class="PointTag-address">Rua Cel. Valêncio Carneiro, 399</p>
+				<p class="PointTag-phone">18 3341 5251</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Palmital</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Praça da Matriz, 55</p>
+				<p class="PointTag-phone">18 3351 4515</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PARAGUAÇU PAULISTA</h1>
+				<h2 class="PointTag-local font-amber-a700">Solário Piscinas</h2>
+				<p class="PointTag-address">Av. Siqueira Campos, 2222</p>
+				<p class="PointTag-phone">18 3361-5076</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PORTARIA</h1>
+				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
+				<p class="PointTag-address">Rua XV de Novembro, 29</p>
+				<p class="PointTag-phone">(À partir de 23/02)</p>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</section>
+
+<footer class="Footer Footer--tickets">
+
+	<div class="Footer-inner container">
+
+		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
+
+		<p>Rua XV de Novembro, 29 - Palmital, SP</p>
+		<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a></p>
+		<p>Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a></p>
+		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
+
+		<div class="Footer-social">
+
+			<a href="https://www.messenger.com/t/tonovaso.palmital/" class="Footer-socialIcon">
+
+				<span class="icon-facebook-messenger"></span>
+
+			</a>
+
+			<a href="https://www.facebook.com/events/150763765394621/" class="Footer-socialIcon">
+
+				<span class="icon-facebook"></span>
+
+			</a>
+
+			<a href="https://www.instagram.com/blocotnv/" class="Footer-socialIcon">
+
+				<span class="icon-instagram"></span>
+
+			</a>
+
+
+		</div>
+
+		<p>TNV © 1998 - 2017</p>
+
+	</div>
+
+</footer>
+
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
 <script>
 	// Initialize Firebase
@@ -694,6 +925,7 @@
 	firebase.initializeApp(config);
 </script>
 
+<script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -702,6 +934,23 @@
 
 	var tickets = new Tickets(document.getElementById('tickets'));
 	tickets.dialog = new Dialog(document.getElementById('tickets-dialog'));
+
+	var abadaAnchor = new Anchor(document.getElementById('abadas'), {
+		duration: 600,
+		easing: 'easeInQuad'
+	});
+
+	var listTriggers = document.querySelectorAll('.trigger-abadas');
+
+	for(var i = 0; i < listTriggers.length; i++) {
+
+		listTriggers[i].addEventListener('click', function (e) {
+			e.preventDefault();
+			abadaAnchor.push();
+		});
+
+	}
+
 
 </script>
 
