--- a/public/steps.html
+++ b/public/steps.html
@@ -57,126 +57,18 @@
 	}
 </style>
 
-<style>
-
-	.points {
-		margin: 0px;
-		display: flex;
-		flex-direction: column;
-		padding: 0px;
-	}
-
-	.points-wrapper {
-		padding: 0px;
-		margin: 0px;
-		width: 99vw;
-	}
-
-	.points-title {
-
-		display: flex;
-		justify-content: center;
-		padding: .5em 0px;
-		margin: 0 0 45px 0;
-		background-color: #eeeeee;
-
-	}
-
-	.points h1 {
-
-		color: #ffa000;
-		font-size: 3em;
-
-	}
-
-	.points h2 {
-
-		color: #3e2723;
-		font-weight: 700;
-		font-size: 1.5em;
-		letter-spacing: .07em;
-
-	}
-
-	.points h3 {
-
-		color: #ffa000;
-		font-weight: 600;
-		font-size: 1.5em;
-
-	}
-
-	.points h4 {
-
-		color: #3e2723;
-		font-size: .875em;
-
-	}
-
-	.points h5 {
-
-		color: #3e2723;
-		font-size: .875em;
-
-	}
-
-	.tags {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-wrap: wrap;
-	}
-
-	.tags-wrapper {
-		/*background-color: #f5f5f5;*/
-		height: 190px;
-		width: 320px;
-		margin: 0px;
-		display: flex;
-		flex-direction: column;
-	}
-
-	.tag-city {
-		padding: 1em 0px .5em 0px;
-		display: flex;
-		justify-content: center;
-	}
-
-	.tag-local {
-		display: flex;
-		justify-content: center;
-		padding: .2em 0px;
-	}
-
-	.tag-address {
-
-		display: flex;
-		justify-content: center;
-		/*padding: .5em 0px;*/
-
-	}
-
-	.tag-phone {
-
-		display: flex;
-		justify-content: center;
-		/*padding: .5em 0px;*/
-
-	}
-
-</style>
-
 <body class="tk-proxima-nova">
 
-<!--<script>-->
-	<!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-				<!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-			<!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-	<!--})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');-->
-<!---->
-	<!--ga('create', 'UA-87600862-1', 'auto');-->
-	<!--ga('send', 'pageview');-->
-<!--</script>-->
+<script>
+	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	ga('create', 'UA-87600862-1', 'auto');
+	ga('send', 'pageview');
+
+</script>
 
 <div id="tickets-dialog" class="Dialog">
 
@@ -406,8 +298,7 @@
 
 				<h2 class="GuideStep-title font-amber-a700">5 - Pronto!</h2>
 
-				<!--<p class="GuideStep-description">Imprima o comprovante e troque-o pela pulseira na portaria do bloco.</p>-->
-				<p class="GuideStep-description">Com comprovante impresso, retire sua pulseira na portaria e <a href="/">confira os locais de retirada</a> dos abadás.</p>
+				<p class="GuideStep-description">Com comprovante impresso, retire sua pulseira na portaria e <a class="trigger-abadas" href="#abadas">confira os locais de retirada dos abadás</a>.</p>
 
 			</div>
 
@@ -491,7 +382,7 @@
 							<p>
 								O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								A pulseira poderá ser retirada na portaria do bloco à partir do dia 23/02/2017 e os abadás já podem ser retirados nos locais que você <a class="trigger-abadas" href="#abadas">confere aqui.</a>
 							</p>
 
 						</div>
@@ -575,7 +466,7 @@
 							<p>
 								O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								A pulseira poderá ser retirada na portaria do bloco à partir do dia 23/02/2017 e o abadá já pode ser retirado nos locais que você <a class="trigger-abadas" href="#abadas">confere aqui.</a>
 							</p>
 
 						</div>
@@ -658,7 +549,7 @@
 
 							<p>
 								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								As pulseiras poderão ser retiradas na portaria do bloco à partir do dia 23/02/2017.
 							</p>
 
 						</div>
@@ -741,7 +632,7 @@
 
 							<p>
 								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								As pulseiras poderão ser retiradas na portaria do bloco à partir do dia 23/02/2017.
 							</p>
 
 						</div>
@@ -823,8 +714,8 @@
 						<div class="TicketsOption-description">
 
 							<p>
-								Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+								Adquira um abadá pelo site e compareça a um dos diversos pontos de retirada com seu comprovante para efetuar sua retirada.
+								Os locais para retirada você <a class="trigger-abadas" href="#abadas">encontra aqui.</a>
 							</p>
 
 						</div>
@@ -843,14 +734,6 @@
 			</div>
 
 		</div>
-
-		<footer class="Tickets-footer">
-
-			<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a> <br/>
-				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a> <br/>
-				<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
-
-		</footer>
 
 		<div class="TicketsCheckout Tickets-checkout">
 
@@ -883,83 +766,21 @@
 
 </div>
 
-<section class="Points">
+<section class="Points font-brown-900">
 
 	<div class="Points-background"></div>
 	<div class="Points-inner">
 
-		<div class="Points-title">
-			Pontos de Venda
+		<div id="abadas" class="Points-title grey-50 font-amber-a700">
+			Pontos de retirada dos abadás
 		</div>
 
 		<div class="Points-list container">
 
 			<div class="PointTag">
 
-				<h1 class="PointTag-city">Assis</h1>
-				<h2 class="PointTag-local">Cheia de Charme</h2>
-				<p class="PointTag-address">Rua Gonçalves Dias, 50</p>
-				<p class="PointTag-phone">18 3325 1399</p>
-
-			</div>
-
-			<div class="PointTag">
-
-				<h1 class="PointTag-city">Assis</h1>
-				<h2 class="PointTag-local">Padaria do Alex</h2>
-				<p class="PointTag-address">Av. Armando Salles de Oliveira, 59</p>
-				<p class="PointTag-phone">18 3022-2166</p>
-
-			</div>
-
-			<div class="PointTag">
-
-				<h1 class="PointTag-city">Cândido Mota</h1>
-				<h2 class="PointTag-local">Wilson Discos</h2>
-				<p class="PointTag-address">Rua Cel. Valêncio Carneiro, 399</p>
-				<p class="PointTag-phone">18 3341 5251</p>
-
-			</div>
-
-			<div class="PointTag">
-
-				<h1 class="PointTag-city">Palmital</h1>
-				<h2 class="PointTag-local">Cheia de Charme</h2>
-				<p class="PointTag-address">Rua Praça da Matriz, 55</p>
-				<p class="PointTag-phone">18 3351 4515</p>
-
-			</div>
-
-			<div class="PointTag">
-
-				<h1 class="PointTag-city">PARAGUAÇU PAULISTA</h1>
-				<h2 class="PointTag-local">Solário Piscinas</h2>
-				<p class="PointTag-address">Av. Siqueira Campos, 2222</p>
-				<p class="PointTag-phone">18 3361-5076</p>
-
-			</div>
-
-			<div class="PointTag">
-
-				<h1 class="PointTag-city">PORTARIA</h1>
-				<h2 class="PointTag-local">Dub's Disco Club</h2>
-				<p class="PointTag-address">Rua XV de Novembro, 29</p>
-				<p class="PointTag-phone">(À partir de 23/02)</p>
-
-			</div>
-
-		</div>
-
-		<div class="Points-title">
-			Pontos de retirada dos abadás
-		</div>
-
-		<div class="Points-list">
-
-			<div class="PointTag">
-
 				<h1 class="PointTag-city">ASSIS</h1>
-				<h2 class="PointTag-local">Cheia de Charme</h2>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
 				<p class="PointTag-address">Rua Gonçalves Dias, 50</p>
 				<p class="PointTag-phone">18 3325 1399</p>
 
@@ -968,7 +789,7 @@
 			<div class="PointTag">
 
 				<h1 class="PointTag-city">PALMITAL</h1>
-				<h2 class="PointTag-local">Cheia de Charme</h2>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
 				<p class="PointTag-address">Rua Praça da Matriz, 55</p>
 				<p class="PointTag-phone">18 3351 4515</p>
 
@@ -977,7 +798,69 @@
 			<div class="PointTag">
 
 				<h1 class="PointTag-city">PORTARIA</h1>
-				<h2 class="PointTag-local">Dub's Disco Club</h2>
+				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
+				<p class="PointTag-address">Rua XV de Novembro, 29</p>
+				<p class="PointTag-phone">(À partir de 23/02)</p>
+
+			</div>
+
+		</div>
+
+		<div class="Points-title grey-50 font-amber-a700">
+			Pontos de Venda
+		</div>
+
+		<div class="Points-list container">
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Assis</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Gonçalves Dias, 50</p>
+				<p class="PointTag-phone">18 3325 1399</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Assis</h1>
+				<h2 class="PointTag-local font-amber-a700">Padaria do Alex</h2>
+				<p class="PointTag-address">Av. Armando Salles de Oliveira, 59</p>
+				<p class="PointTag-phone">18 3022-2166</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Cândido Mota</h1>
+				<h2 class="PointTag-local font-amber-a700">Wilson Discos</h2>
+				<p class="PointTag-address">Rua Cel. Valêncio Carneiro, 399</p>
+				<p class="PointTag-phone">18 3341 5251</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">Palmital</h1>
+				<h2 class="PointTag-local font-amber-a700">Cheia de Charme</h2>
+				<p class="PointTag-address">Rua Praça da Matriz, 55</p>
+				<p class="PointTag-phone">18 3351 4515</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PARAGUAÇU PAULISTA</h1>
+				<h2 class="PointTag-local font-amber-a700">Solário Piscinas</h2>
+				<p class="PointTag-address">Av. Siqueira Campos, 2222</p>
+				<p class="PointTag-phone">18 3361-5076</p>
+
+			</div>
+
+			<div class="PointTag">
+
+				<h1 class="PointTag-city">PORTARIA</h1>
+				<h2 class="PointTag-local font-amber-a700">Dub's Disco Club</h2>
 				<p class="PointTag-address">Rua XV de Novembro, 29</p>
 				<p class="PointTag-phone">(À partir de 23/02)</p>
 
@@ -989,193 +872,45 @@
 
 </section>
 
-<!--
-<div class="points">
+<footer class="Footer Footer--tickets">
 
-	<div class="points-wrapper">
+	<div class="Footer-inner container">
 
-		<div class="points-title">
+		<p class="Footer-title tk-tenby-four">Bloco Tô No Vaso 2017</p>
 
-			<h1>Vendas</h1>
+		<p>Rua XV de Novembro, 29 - Palmital, SP</p>
+		<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a></p>
+		<p>Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a></p>
+		<p><a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
-		</div>
+		<div class="Footer-social">
 
-		<div class="tags">
+			<a href="https://www.messenger.com/t/tonovaso.palmital/" class="Footer-socialIcon">
 
-			<div class="tags-wrapper">
+				<span class="icon-facebook-messenger"></span>
 
-				<div class="tag-city">
-					<h2>ASSIS</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Cheia de Charme</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua Gonçalves Dias, 50</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3325 1399</h5>
-				</div>
+			</a>
 
-			</div>
+			<a href="https://www.facebook.com/events/150763765394621/" class="Footer-socialIcon">
 
-			<div class="tags-wrapper">
+				<span class="icon-facebook"></span>
 
-				<div class="tag-city">
-					<h2>ASSIS</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Padaria do Alex</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Av. Armando Salles de Oliveira, 59</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3022-2166</h5>
-				</div>
+			</a>
 
-			</div>
+			<a href="https://www.instagram.com/blocotnv/" class="Footer-socialIcon">
 
-			<div class="tags-wrapper">
+				<span class="icon-instagram"></span>
 
-				<div class="tag-city">
-					<h2>CÂNDIDO MOTA</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Wilson Discos</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua Cel. Valêncio Carneiro, 399</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3341 5251</h5>
-				</div>
+			</a>
 
-			</div>
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>PALMITAL</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Cheia de Charme</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua Praça da Matriz, 55</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3351 4515</h5>
-				</div>
-
-			</div>
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>PARAGUAÇU PAULISTA</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Solário Piscinas</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Av. Siqueira Campos, 2222</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3361-5076</h5>
-				</div>
-
-			</div>
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>PORTARIA</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Dub's Disco Club</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua XV de Novembro, 29</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>(À partir de 23/02)</h5>
-				</div>
-
-			</div>
 
 		</div>
+
+		<p>TNV © 1998 - 2017</p>
 
 	</div>
 
-	<div class="points-wrapper">
-
-		<div class="points-title">
-
-			<h1>Abadás</h1>
-
-		</div>
-
-		<div class="tags">
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>ASSIS</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Cheia de Charme</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua Gonçalves Dias, 50</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3325 1399</h5>
-				</div>
-
-			</div>
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>PALMITAL</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Cheia de Charme</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua Praça da Matriz, 55</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>18 3351 4515</h5>
-				</div>
-
-			</div>
-
-			<div class="tags-wrapper">
-
-				<div class="tag-city">
-					<h2>PORTARIA</h2>
-				</div>
-				<div class="tag-local">
-					<h3>Dub's Disco Club</h3>
-				</div>
-				<div class="tag-address">
-					<h4>Rua XV de Novembro, 29</h4>
-				</div>
-				<div class="tag-phone">
-					<h5>(À partir de 23/02)</h5>
-				</div>
-
-			</div>
-
-		</div>
-
-	</div>
-
-</div>
--->
-
+</footer>
 
 <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
 <script>
@@ -1190,6 +925,7 @@
 	firebase.initializeApp(config);
 </script>
 
+<script src="dist/js/underscore-min.js"></script>
 <script src="dist/js/tonovaso.js"></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -1198,6 +934,23 @@
 
 	var tickets = new Tickets(document.getElementById('tickets'));
 	tickets.dialog = new Dialog(document.getElementById('tickets-dialog'));
+
+	var abadaAnchor = new Anchor(document.getElementById('abadas'), {
+		duration: 600,
+		easing: 'easeInQuad'
+	});
+
+	var listTriggers = document.querySelectorAll('.trigger-abadas');
+
+	for(var i = 0; i < listTriggers.length; i++) {
+
+		listTriggers[i].addEventListener('click', function (e) {
+			e.preventDefault();
+			abadaAnchor.push();
+		});
+
+	}
+
 
 </script>
 
