--- a/public/tickets-old.html
+++ b/public/tickets-old.html
@@ -1,19 +1,44 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <meta charset="UTF-8">
-<title>Tô No Vaso</title>
+<title>Ingressos | Bloco Tô No Vaso - Palmital</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-<meta name="theme-color" content="#3f51b5"/>
+<link rel="canonical" href="https://tonovaso.com.br/"/>
+<meta property="og:url" content="https://tonovaso.com.br/tickets">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Ingressos | Bloco Tô No Vaso - Palmital">
+<meta property="og:description" content="Compre ingressos e abadás diretamente pelo nosso site">
+<meta property="og:image" content="https://tonovaso.com.br/dist/img/meta-image2.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="800">
+<meta property="fb:pages" content="440721119282308">
+<meta id="theme-color" name="theme-color" content="#3f51b5"/>
+<script src="https://use.typekit.net/jhl4ayv.js"></script>
 <script>
-	(function(d) {
-		var config = {
-					kitId: 'jhl4ayv',
-					scriptTimeout: 3000,
-					async: true
-				},
-				h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-	})(document);
+
+	try {
+		Typekit.load({
+			loading: function() {
+				// Javascript to execute when fonts start loading
+				console.log('loading');
+				document.documentElement.classList.add('is-loading');
+			},
+			active: function() {
+				// Javascript to execute when fonts become active
+				console.log('active');
+				document.documentElement.classList.remove('is-loading');
+				document.documentElement.classList.add('is-active');
+			},
+			inactive: function() {
+				// Javascript to execute when fonts become inactive
+				console.log('inactive');
+				document.documentElement.classList.remove('is-loading');
+			}
+		})
+	} catch(e) {}
+
 </script>
 <script src="dist/js/villa.min.js"></script>
 <link rel="stylesheet" href="dist/css/villa.min.css"/>
@@ -25,6 +50,12 @@
 <script src="dist/js/html5shiv-printshiv.js"></script>
 <script src="dist/js/classList.min.js"></script>
 <![endif]-->
+
+<style>
+	.Tickets h1, h2, h3 {
+		font-family: inherit !important;
+	}
+</style>
 
 <body class="tk-proxima-nova">
 
@@ -56,18 +87,132 @@
 
 </div>
 
+<aside class="Aside font-grey-700">
+
+	<div class="Aside-inner">
+
+		<div class="Aside-content">
+
+			<div class="AsideButton AsideButton--ticket">
+
+				<a href="tickets" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-ticket"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="Aside-text">
+
+				<span>24 a 28 de fevereiro de 2017<span class="heightLarge-visible">, Palmital - SP</span></span>
+
+			</div>
+
+			<div class="AsideButton AsideButton--messenger">
+
+				<a href="https://www.messenger.com/t/tonovaso.palmital/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook-messenger"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--facebook">
+
+				<a href="https://www.facebook.com/events/150763765394621/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-facebook-squared"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+			<div class="AsideButton AsideButton--instagram">
+
+				<a href="https://www.instagram.com/blocotnv/" class="AsideButton-selectArea" draggable="false">
+
+					<div class="AsideButton-icon">
+
+						<span class="icon-instagram"></span>
+
+					</div>
+
+				</a>
+
+			</div>
+
+		</div>
+
+	</div>
+
+</aside>
+
+<nav class="Nav">
+
+	<!--<div class="Nav-background"></div>-->
+
+	<ul class="Nav-menu">
+
+		<li class="NavItem">
+
+			<a href="/"><span>Início</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="tickets"><span>Ingressos</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="20-anos"><span>20 Anos</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="/#sobre"><span>O evento</span></a>
+
+		</li>
+
+		<li class="NavItem">
+
+			<a href="contato"><span>Contato</span></a>
+
+		</li>
+
+	</ul>
+
+</nav>
+
 <header class="TicketsHeader">
 
 	<div class="TicketsHeader-inner container">
 
-		<a href="./"><img src="dist/img/logo.png" alt=""/></a>
+		<a href="./"><img src="dist/img/logo/small/TNVLogo.png" alt=""/></a>
 
 		<p>Data: de 24/02/17 à 28/02/17 <br/>
 			14hs de Open Bar <br/> (todos os dias das 14h às 04h) <br/>
-			Local: Palmital - São Paulo</p>
+			Local: Rua XV de Novembro, 29 - Palmital, SP</p>
 
 	</div>
-	
+
 </header>
 
 <div id="tickets" class="Tickets">
@@ -78,7 +223,7 @@
 
 		<div class="Tickets-options">
 
-			<div class="TicketsOption" data-option-id="TNVPACKPROMO_M" data-price="324.00" data-description="Pacote Masculino + Abadá | Pacote Promocional">
+			<div class="TicketsOption" data-option-id="TNVPACK_M" data-price="364.00" data-description="Pacote Masculino + Abadá">
 
 				<div class="TicketsOption-inner">
 
@@ -86,12 +231,12 @@
 
 						<div class="TicketsOption-primary">
 
-							<h2 class="TicketOption-title">Pacote Masculino + Abadá | Pacote Promocional</h2>
+							<h2 class="TicketOption-title">Pacote Masculino + Abadá</h2>
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$300,00</span>
-								<span class="TicketOption-taxFee">(+R$24,00 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$350,00</span>
+								<span class="TicketOption-taxFee">(+R$14,00 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -112,7 +257,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q01">
+										<select class="Select-select" name="quantity" id="q01">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -141,10 +286,11 @@
 
 						<div class="TicketsOption-description">
 
-							<p>O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
+							<p>
+								O pacote masculino dá o direito a dois abadás e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								Aproveite o preço promocional :)
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -161,7 +307,7 @@
 
 			</div>
 
-			<div class="TicketsOption" data-option-id="TNVPACKPROMO_F" data-price="194.39" data-description="Pacote Feminino + Abadá | Pacote Promocional">
+			<div class="TicketsOption" data-option-id="TNVPACK_F" data-price="239.20" data-description="Pacote Feminino + Abadá">
 
 				<div class="TicketsOption-inner">
 
@@ -169,12 +315,12 @@
 
 						<div class="TicketsOption-primary">
 
-							<h2 class="TicketOption-title">Pacote Feminino + Abadá | Pacote Promocional</h2>
+							<h2 class="TicketOption-title">Pacote Feminino + Abadá</h2>
 
 							<div class="TicketOption-info">
 
-								<span class="TicketOption-price">R$180,00</span>
-								<span class="TicketOption-taxFee">(+R$14,39 TAXA)</span> <!-- 7,999% ~ 8% -->
+								<span class="TicketOption-price">R$230,00</span>
+								<span class="TicketOption-taxFee">(+R$9,20 TAXA)</span> <!-- 7,999% ~ 8% -->
 
 							</div>
 
@@ -195,7 +341,7 @@
 
 										</div>
 
-										<select class="Select-select" name="quanity" id="q02">
+										<select class="Select-select" name="quantity" id="q02">
 
 											<option value="0">0</option>
 											<option value="1">1</option>
@@ -224,10 +370,260 @@
 
 						<div class="TicketsOption-description">
 
-							<p>O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
+							<p>
+								O pacote feminino dá o direito a um abadá e uma pulseira para curtir todos os 5 dias do melhor carnaval da região.
 								São 14 horas de festa open bar todos os dias com atrações ao vivo, muita bebida e gente bonita.
-								Aproveite o preço promocional :)
-								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.</p>
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
+
+						</div>
+
+						<div class="TicketsOption-expand">
+
+							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
+							<a class="TicketsOptions-showLess">Ocultar Informações</a>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="TicketsOption" data-option-id="TNVDIAR_M" data-price="83.20" data-description="Diária Masculina">
+
+				<div class="TicketsOption-inner">
+
+					<div class="TicketsOption-header">
+
+						<div class="TicketsOption-primary">
+
+							<h2 class="TicketOption-title">Diária Masculina</h2>
+
+							<div class="TicketOption-info">
+
+								<span class="TicketOption-price">R$80,00</span>
+								<span class="TicketOption-taxFee">(+R$3,20 TAXA)</span> <!-- 7,999% ~ 8% -->
+
+							</div>
+
+						</div>
+
+						<div class="TicketsOption-secondary">
+
+							<div class="TicketsOption-quantity">
+
+								<div class="Select Select--ticketOption" data-name="select-03">
+
+									<div class="Select-inner">
+
+										<div class="Select-value"></div>
+										<div class="Select-arrow">
+
+											<span class="icon-keyboard_arrow_down"></span>
+
+										</div>
+
+										<select class="Select-select" name="quantity" id="q03">
+
+											<option value="0">0</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+
+										</select>
+
+									</div>
+
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+					<div class="TicketsOption-footer">
+
+						<div class="TicketsOption-description">
+
+							<p>
+								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
+
+						</div>
+
+						<div class="TicketsOption-expand">
+
+							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
+							<a class="TicketsOptions-showLess">Ocultar Informações</a>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="TicketsOption" data-option-id="TNVDIAR_F" data-price="72.80" data-description="Diária Feminina">
+
+				<div class="TicketsOption-inner">
+
+					<div class="TicketsOption-header">
+
+						<div class="TicketsOption-primary">
+
+							<h2 class="TicketOption-title">Diária Feminina</h2>
+
+							<div class="TicketOption-info">
+
+								<span class="TicketOption-price">R$70,00</span>
+								<span class="TicketOption-taxFee">(+R$2,80 TAXA)</span> <!-- 7,999% ~ 8% -->
+
+							</div>
+
+						</div>
+
+						<div class="TicketsOption-secondary">
+
+							<div class="TicketsOption-quantity">
+
+								<div class="Select Select--ticketOption" data-name="select-04">
+
+									<div class="Select-inner">
+
+										<div class="Select-value"></div>
+										<div class="Select-arrow">
+
+											<span class="icon-keyboard_arrow_down"></span>
+
+										</div>
+
+										<select class="Select-select" name="quantity" id="q04">
+
+											<option value="0">0</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+
+										</select>
+
+									</div>
+
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+					<div class="TicketsOption-footer">
+
+						<div class="TicketsOption-description">
+
+							<p>
+								A diária dá direito a entrada a um dia de folia, escolhido pelo folião na hora da retirada da pulseira.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
+
+						</div>
+
+						<div class="TicketsOption-expand">
+
+							<a href="#" class="TicketsOptions-showMore">Mais Informações</a>
+							<a class="TicketsOptions-showLess">Ocultar Informações</a>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+			<div class="TicketsOption" data-option-id="TNVABADA" data-price="31.20" data-description="Abadá">
+
+				<div class="TicketsOption-inner">
+
+					<div class="TicketsOption-header">
+
+						<div class="TicketsOption-primary">
+
+							<h2 class="TicketOption-title">Abadá</h2>
+
+							<div class="TicketOption-info">
+
+								<span class="TicketOption-price">R$30,00</span>
+								<span class="TicketOption-taxFee">(+R$1,20 TAXA)</span> <!-- 7,999% ~ 8% -->
+
+							</div>
+
+						</div>
+
+						<div class="TicketsOption-secondary">
+
+							<div class="TicketsOption-quantity">
+
+								<div class="Select Select--ticketOption" data-name="select-05">
+
+									<div class="Select-inner">
+
+										<div class="Select-value"></div>
+										<div class="Select-arrow">
+
+											<span class="icon-keyboard_arrow_down"></span>
+
+										</div>
+
+										<select class="Select-select" name="quantity" id="q05">
+
+											<option value="0">0</option>
+											<option value="1">1</option>
+											<option value="2">2</option>
+											<option value="3">3</option>
+											<option value="4">4</option>
+											<option value="5">5</option>
+											<option value="6">6</option>
+											<option value="7">7</option>
+											<option value="8">8</option>
+											<option value="9">9</option>
+
+										</select>
+
+									</div>
+
+								</div>
+
+							</div>
+
+						</div>
+
+					</div>
+
+					<div class="TicketsOption-footer">
+
+						<div class="TicketsOption-description">
+
+							<p>
+								Adquira um abadá e compareça a um dos diversos pontos de retirada para garantir sua vestimenta.
+								*Informações sobre os locais de retirada dos abadás e pulseiras em breve aqui no nosso site e também nas redes sociais do Bloco Tô no Vaso.
+							</p>
 
 						</div>
 
@@ -246,17 +642,13 @@
 
 		</div>
 
-		<div class="Tickets-footer">
+		<footer class="Tickets-footer">
 
-			<footer class="Footer">
+			<p>Osmair <a href="tel:+5518996155409"><span class="icon-whatsapp font-green"></span>18 9 9615 5409</a> <br/>
+				Braz <a href="tel:+5518991076902"><span class="icon-whatsapp font-green"></span>18 9 9107 6902</a> <br/>
+				<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
 
-				<p>Osmair <a href="tel:+5518996155409">18 9 9615 5409</a> <br/>
-					Braz <a href="tel:+5518991076902">18 9 9107 6902</a> <br/>
-					<a href="mailto:contato@tonovaso.com.br">contato@tonovaso.com.br</a></p>
-
-			</footer>
-
-		</div>
+		</footer>
 
 		<div class="TicketsCheckout Tickets-checkout">
 
@@ -277,7 +669,7 @@
 
 				<div class="TicketsCheckout-start">
 
-					<span>Comprar</span>
+					<span>Finalizar pedido</span>
 
 				</div>
 
